applications/rsu/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rsu
spec:
  selector:
    app: rsu
  ports:
    - name: http
      port: 80
      targetPort: http
