applications/rsu/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rsu
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  tls:
    - hosts:
        - rsu.homelab.kszpakowski.com
      secretName: rsu-cert
  rules:
    - host: rsu.homelab.kszpakowski.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rsu
                port:
                  name: http
